add google scholar link.

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </div>
         <div class="mdl-layout__tab-bar mdl-js-ripple-effect mdl-color--primary-dark">
           <a href="#overview" class="mdl-layout__tab is-active">Overview</a>
-          <a href="#features" class="mdl-layout__tab">Features</a>
+          <a href="https://scholar.google.co.kr/citations?user=tFNxNtAAAAAJ&hl=en" class="mdl-layout__tab">Google Scholar</a>
           <a href="#features" class="mdl-layout__tab">Details</a>
           <a href="#features" class="mdl-layout__tab">Technology</a>
           <a href="#features" class="mdl-layout__tab">FAQ</a>
@@ -266,7 +266,7 @@
               <ul class="mdl-mega-footer--link-list">
                 <li><a href="#">Questions</a></li>
                 <li><a href="#">Answers</a></li>
-                <li><a href="#">Contact us</a></li>
+                <li><a href="#">Contact</a></li>
               </ul>
             </div>
           </div>
@@ -275,7 +275,7 @@
               More Information
             </div>
             <ul class="mdl-mega-footer--link-list">
-              <li><a href="https://developers.google.com/web/starter-kit/">Web Starter Kit</a></li>
+              <li><a href="https://developers.google.com/web/starter-kit/">Namho Gim (ARC)</a></li>
               <li><a href="#">Help</a></li>
               <li><a href="#">Privacy and Terms</a></li>
             </ul>
