modified footer in index.html.

--- a/index.html
+++ b/index.html
@@ -264,18 +264,16 @@
               <input class="mdl-mega-footer--heading-checkbox" type="checkbox" checked>
               <h1 class="mdl-mega-footer--heading">FAQ</h1>
               <ul class="mdl-mega-footer--link-list">
-                <li><a href="#">Questions</a></li>
-                <li><a href="#">Answers</a></li>
                 <li><a href="#">Contact</a></li>
               </ul>
             </div>
           </div>
           <div class="mdl-mega-footer--bottom-section">
             <div class="mdl-logo">
-              More Information
+				<!-- More Information -->
             </div>
             <ul class="mdl-mega-footer--link-list">
-              <li><a href="https://developers.google.com/web/starter-kit/">Namho Gim (ARC)</a></li>
+              <li><a href="#">Namho Gim (ARC)</a></li>
               <li><a href="#">Help</a></li>
               <li><a href="#">Privacy and Terms</a></li>
             </ul>
