--- a/index.html
+++ b/index.html
@@ -274,6 +274,7 @@
             </div>
             <ul class="mdl-mega-footer--link-list">
               <li><a href="#">Namho Gim (ARC)</a></li>
+			  <li><a href="https://scholar.google.co.kr/citations?user=tFNxNtAAAAAJ&hl=en">Google Scholar</a></li>
               <li><a href="#">Help</a></li>
               <li><a href="#">Privacy and Terms</a></li>
             </ul>
