--- a/index.html
+++ b/index.html
@@ -273,7 +273,8 @@
 				<!-- More Information -->
             </div>
             <ul class="mdl-mega-footer--link-list">
-              <li><a href="#">Namho Gim (ARC)</a></li>
+			  <li><a "Copyright Â 2017"<a class="org fn url" href="/" target="_blank">Namho Gim (ARC)</a> " All right reserved.</li>
+			  <!-- <li><a href="#">Namho Gim (ARC)</a></li> -->
 			  <li><a href="https://scholar.google.co.kr/citations?user=tFNxNtAAAAAJ&hl=en">Google Scholar</a></li>
               <li><a href="#">Help</a></li>
               <li><a href="#">Privacy and Terms</a></li>
