add publications tab.

--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
         <div class="mdl-layout--large-screen-only mdl-layout__header-row">
         </div>
         <div class="mdl-layout__tab-bar mdl-js-ripple-effect mdl-color--primary-dark">
-          <a href="#overview" class="mdl-layout__tab is-active">Namho Gim</a>
-          <a href="#features" class="mdl-layout__tab">Publications</a>
+          <a href="#namhogim" class="mdl-layout__tab is-active">Namho Gim</a>
+          <a href="#publications" class="mdl-layout__tab">Publications</a>
           <a href="#features" class="mdl-layout__tab">Researches</a>
           <a href="#features" class="mdl-layout__tab">FAQ</a>
           <button class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored mdl-shadow--4dp mdl-color--accent" id="add">
@@ -74,7 +74,7 @@
         </div>
       </header>
       <main class="mdl-layout__content">
-        <div class="mdl-layout__tab-panel is-active" id="overview">
+        <div class="mdl-layout__tab-panel is-active" id="namhogim">
           <section class="section--center mdl-grid mdl-grid--no-spacing mdl-shadow--2dp">
             <header class="section__play-btn mdl-cell mdl-cell--3-col-desktop mdl-cell--2-col-tablet mdl-cell--4-col-phone mdl-color--teal-100 mdl-color-text--white">
 				<!--<i class="material-icons">play_circle_filled</i>-->
@@ -172,11 +172,11 @@
             </div>
           </section>
         </div>
-        <div class="mdl-layout__tab-panel" id="features">
+        <div class="mdl-layout__tab-panel" id="publications">
           <section class="section--center mdl-grid mdl-grid--no-spacing">
             <div class="mdl-cell mdl-cell--12-col">
-              <h4>Features</h4>
-              Minim duis incididunt est cillum est ex occaecat consectetur. Qui sint ut et qui nisi cupidatat. Reprehenderit nostrud proident officia exercitation anim et pariatur ex.
+              <h4>Publications</h4>
+			  The list of My Publications will be updated soon.
               <ul class="toc">
                 <h4>Contents</h4>
                 <a href="#lorem1">Lorem ipsum</a>
@@ -268,9 +268,9 @@
             </div>
           </div>
           <div class="mdl-mega-footer--bottom-section">
-            <div class="mdl-logo">
+            <!--<div class="mdl-logo">
 				<!-- More Information -->
-            </div>
+			</div>-->
             <ul class="mdl-mega-footer--link-list">
 			  <li>Copyright &#169 2017 <a class="org fn url" href="/" target="_blank">Namho Gim (ARC)</a> All right reserved.</li>
 			  <!-- <li><a href="#">Namho Gim (ARC)</a></li> -->
