--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@
     material.red-teal.min.css
     material.blue-orange.min.css
     material.purple-indigo.min.css
-    -->
-    <link rel="stylesheet" href="https://code.getmdl.io/1.2.1/material.blue-orange.min.css">
+	<link rel="stylesheet" href="https://code.getmdl.io/1.2.1/material.blue-orange.min.css">-->
 
     <!-- Your styles -->
     <link rel="stylesheet" href="styles/main.css">
@@ -67,10 +66,10 @@
           <a href="#publications" class="mdl-layout__tab">Publications</a>
           <a href="#researches" class="mdl-layout__tab">Researches</a>
           <a href="#contact" class="mdl-layout__tab">FAQ</a>
-          <button class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored mdl-shadow--4dp mdl-color--accent" id="add">
+          <!--<button class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored mdl-shadow--4dp mdl-color--accent" id="add">
             <i class="material-icons" role="presentation">add</i>
             <span class="visuallyhidden">Add</span>
-          </button>
+		  </button>-->
         </div>
       </header>
       <main class="mdl-layout__content">
