--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
     material.red-teal.min.css
     material.blue-orange.min.css
     material.purple-indigo.min.css
-	<link rel="stylesheet" href="https://code.getmdl.io/1.2.1/material.blue-orange.min.css">-->
+	-->
+	<link rel="stylesheet" href="https://code.getmdl.io/1.2.1/material.blue-orange.min.css">
 
     <!-- Your styles -->
     <link rel="stylesheet" href="styles/main.css">
