--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
           <a href="#publications" class="mdl-layout__tab">Publications</a>
           <a href="#researches" class="mdl-layout__tab">Researches</a>
           <a href="#contact" class="mdl-layout__tab">FAQ</a>
-          <!--<button class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored mdl-shadow--4dp mdl-color--accent" id="add">
+          <button class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored mdl-shadow--4dp mdl-color--accent" id="add">
             <i class="material-icons" role="presentation">add</i>
             <span class="visuallyhidden">Add</span>
-		  </button>-->
+		  </button>
         </div>
       </header>
       <main class="mdl-layout__content">
@@ -123,9 +123,9 @@
                   Dolore ex deserunt aute fugiat aute nulla ea sunt aliqua nisi cupidatat eu. Duis nulla tempor do aute et eiusmod velit exercitation nostrud quis <a href="#">proident minim</a>.
                 </div>
               </div>
-              <!--<div class="mdl-card__actions">
+              <div class="mdl-card__actions">
                 <a href="#" class="mdl-button">Read our features</a>
-			  </div>-->
+			  </div>
             </div>
             <button class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--icon" id="btn2">
               <i class="material-icons">more_vert</i>
