--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
 	<script src="./styles/src/ripple/ripple.js"></script>
 	<script src="scripts/main.js"></script> 
 	<!-- build:js scripts/main.min.js -->
-    <script src="scripts/main.js"></script>
+	<!--<script src="scripts/main.js"></script>-->
     <!-- endbuild -->
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
