add profile image. and card section test.

--- a/index.html
+++ b/index.html
@@ -62,64 +62,51 @@
         </div>
         <div class="mdl-layout--large-screen-only mdl-layout__header-row">
         </div>
-        <div class="mdl-layout__tab-bar mdl-js-ripple-effect mdl-color--primary-dark">
-          <a href="#namhogim" class="mdl-layout__tab is-active">Namho Gim</a>
-          <a href="#publications" class="mdl-layout__tab">Publications</a>
-          <a href="#researches" class="mdl-layout__tab">Researches</a>
-          <a href="#contact" class="mdl-layout__tab">FAQ</a>
-		  <!--<button class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored mdl-shadow--4dp mdl-color--accent" id="add">
-            <i class="material-icons" role="presentation">add</i>
-            <span class="visuallyhidden">Add</span>
-		  </button>-->
-        </div>
+		<div class="mdl-layout__tab-bar mdl-js-ripple-effect mdl-color--primary-dark">
+			<a href="#namhogim" class="mdl-layout__tab is-active">Namho Gim</a>
+			<a href="#publications" class="mdl-layout__tab">Publications</a>
+			<a href="#researches" class="mdl-layout__tab">Researches</a>
+			<a href="#contact" class="mdl-layout__tab">FAQ</a>
+		</div>
       </header>
       <main class="mdl-layout__content">
         <div class="mdl-layout__tab-panel is-active" id="namhogim">
           <section class="section--center mdl-grid mdl-grid--no-spacing mdl-shadow--2dp">
-            <header class="section__play-btn mdl-cell mdl-cell--3-col-desktop mdl-cell--2-col-tablet mdl-cell--4-col-phone mdl-color--teal-100 mdl-color-text--white">
-				<!--<i class="material-icons">play_circle_filled</i>-->
+			  <img src="./images/touch/profile.png" alt="profile" style="width:200px;height:200px;">
+			  <!--<header class="section__play-btn mdl-cell mdl-cell--3-col-desktop mdl-cell--2-col-tablet mdl-cell--4-col-phone mdl-color--teal-100 mdl-color-text--white">-->
             </header>
             <div class="mdl-card mdl-cell mdl-cell--9-col-desktop mdl-cell--6-col-tablet mdl-cell--4-col-phone">
               <div class="mdl-card__supporting-text">
-				  <!--<h4>Features</h4>-->
-                Dolore ex deserunt aute fugiat aute nulla ea sunt aliqua nisi cupidatat eu. Nostrud in laboris labore nisi amet do dolor eu fugiat consectetur elit cillum esse.
+				  self introduction will go here.
               </div>
               <div class="mdl-card__actions">
-                <a href="./git_summary.md" class="mdl-button">Details</a>
+                <a href=# class="mdl-button">Details</a>
 			  </div>
             </div>
-			<!--<button class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--icon" id="btn1"> -->
-            <!--  <i class="material-icons">more_vert</i>
-			</button>-->
-			<!--<ul class="mdl-menu mdl-js-menu mdl-menu--bottom-right" for="btn1">-->
-            <!--  <li class="mdl-menu__item">Lorem</li>
-              <li class="mdl-menu__item" disabled>Ipsum</li>
-              <li class="mdl-menu__item">Dolor</li>
-			</ul>-->
           </section>
           <section class="section--center mdl-grid mdl-grid--no-spacing mdl-shadow--2dp">
             <div class="mdl-card mdl-cell mdl-cell--12-col">
               <div class="mdl-card__supporting-text mdl-grid mdl-grid--no-spacing">
-                <h4 class="mdl-cell mdl-cell--12-col">Details</h4>
+                <h4 class="mdl-cell mdl-cell--12-col">Interest Area</h4>
                 <div class="section__circle-container mdl-cell mdl-cell--2-col mdl-cell--1-col-phone">
                   <div class="section__circle-container__circle mdl-color--primary"></div>
                 </div>
                 <div class="section__text mdl-cell mdl-cell--10-col-desktop mdl-cell--6-col-tablet mdl-cell--3-col-phone">
-                  <h5>Lorem ipsum dolor sit amet</h5>
+                  <h5>Computer Architecture</h5>
                   Dolore ex deserunt aute fugiat aute nulla ea sunt aliqua nisi cupidatat eu. Duis nulla tempor do aute et eiusmod velit exercitation nostrud quis <a href="#">proident minim</a>.
                 </div>
                 <div class="section__circle-container mdl-cell mdl-cell--2-col mdl-cell--1-col-phone">
                   <div class="section__circle-container__circle mdl-color--primary"></div>
                 </div>
                 <div class="section__text mdl-cell mdl-cell--10-col-desktop mdl-cell--6-col-tablet mdl-cell--3-col-phone">
-                  <h5>Lorem ipsum dolor sit amet</h5>
+                  <h5>something</h5>
                   Dolore ex deserunt aute fugiat aute nulla ea sunt aliqua nisi cupidatat eu. Duis nulla tempor do aute et eiusmod velit exercitation nostrud quis <a href="#">proident minim</a>.
                 </div>
                 <div class="section__circle-container mdl-cell mdl-cell--2-col mdl-cell--1-col-phone">
                   <div class="section__circle-container__circle mdl-color--primary"></div>
                 </div>
                 <div class="section__text mdl-cell mdl-cell--10-col-desktop mdl-cell--6-col-tablet mdl-cell--3-col-phone">
-                  <h5>Lorem ipsum dolor sit amet</h5>
+                  <h5>Money and the fame</h5>
                   Dolore ex deserunt aute fugiat aute nulla ea sunt aliqua nisi cupidatat eu. Duis nulla tempor do aute et eiusmod velit exercitation nostrud quis <a href="#">proident minim</a>.
                 </div>
               </div>
@@ -127,14 +114,6 @@
                 <a href="#" class="mdl-button">Read our features</a>
 			  </div>-->
             </div>
-			<!--<button class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--icon" id="btn2">-->
-            <!--  <i class="material-icons">more_vert</i>
-            </button>
-			<ul class="mdl-menu mdl-js-menu mdl-menu--bottom-right" for="btn2"> -->
-            <!--  <li class="mdl-menu__item">Lorem</li>
-              <li class="mdl-menu__item" disabled>Ipsum</li>
-              <li class="mdl-menu__item">Dolor</li>
-			  </ul>-->
           </section>
           <section class="section--center mdl-grid mdl-grid--no-spacing mdl-shadow--2dp">
             <div class="mdl-card mdl-cell mdl-cell--12-col">
@@ -146,15 +125,18 @@
                 <a href="#" class="mdl-button">Read our features</a>
 			  </div>-->
             </div>
-			<!--<button class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--icon" id="btn3">-->
-            <!--  <i class="material-icons">more_vert</i>
-            </button>
-			<ul class="mdl-menu mdl-js-menu mdl-menu--bottom-right" for="btn3">-->
-            <!-- <li class="mdl-menu__item">Lorem</li>
-              <li class="mdl-menu__item" disabled>Ipsum</li>
-              <li class="mdl-menu__item">Dolor</li>
-			</ul>-->
           </section>
+		  <section class="section--center mdl-grid mdl-grid--no-spacing mdl-shadow--2dp">
+			  <div class="mdl-card mdl-cell mdl-cell--12-col">
+				  <div class="mdl-card__supporting-text">
+					  <h4>Empty Card section</h4>
+					  contents here.
+				  </div>
+				  <div class="mdl-card__actions">
+					  <a href="#" class="mdl-button">Details</a>
+				  </div>
+			  </div>
+		  </section>
           <section class="section--footer mdl-color--white mdl-grid">
             <div class="section__circle-container mdl-cell mdl-cell--2-col mdl-cell--1-col-phone">
               <div class="section__circle-container__circle mdl-color--accent section__circle--big"></div>
