add lab logo :D

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
         <div class="mdl-layout--large-screen-only mdl-layout__header-row">
         </div>
         <div class="mdl-layout--large-screen-only mdl-layout__header-row">
+		  <img src="./images/touch/icon-128x128.png" alt="logo" style="width:128px;height:128px;">
           <h3>Namho Gim (ARC)</h3>
         </div>
         <div class="mdl-layout--large-screen-only mdl-layout__header-row">
@@ -72,8 +73,8 @@
       <main class="mdl-layout__content">
         <div class="mdl-layout__tab-panel is-active" id="namhogim">
           <section class="section--center mdl-grid mdl-grid--no-spacing mdl-shadow--2dp">
+			  <header class="section__play-btn mdl-cell mdl-cell--3-col-desktop mdl-cell--2-col-tablet mdl-cell--4-col-phone mdl-color--teal-100 mdl-color-text--white">
 			  <img src="./images/touch/profile.png" alt="profile" style="width:200px;height:200px;">
-			  <!--<header class="section__play-btn mdl-cell mdl-cell--3-col-desktop mdl-cell--2-col-tablet mdl-cell--4-col-phone mdl-color--teal-100 mdl-color-text--white">-->
             </header>
             <div class="mdl-card mdl-cell mdl-cell--9-col-desktop mdl-cell--6-col-tablet mdl-cell--4-col-phone">
               <div class="mdl-card__supporting-text">
