--- a/index.html
+++ b/index.html
@@ -58,8 +58,9 @@
         <div class="mdl-layout--large-screen-only mdl-layout__header-row">
         </div>
         <div class="mdl-layout--large-screen-only mdl-layout__header-row">
-		  <img src="./images/touch/icon-128x128.png" alt="logo" style="width:128px;height:128px;">
-          <h3>Namho Gim (ARC)</h3>
+			<img src="./images/touch/Seoul_national_university_emblem.png" alt="snulogo" style="width:162px;height:162px;">
+			<img src="./images/touch/arclogo-192x192.png" alt="arclogo" style="width:192px;height:192px;">
+          <h3>	Namho Gim (ARC)</h3>
         </div>
         <div class="mdl-layout--large-screen-only mdl-layout__header-row">
         </div>
@@ -81,7 +82,7 @@
 				  self introduction will go here.
               </div>
               <div class="mdl-card__actions">
-                <a href=# class="mdl-button">Details</a>
+                <a href="./gitsummarybyNH.html" class="mdl-button">Details</a>
 			  </div>
             </div>
           </section>
