--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="description" content="">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Namho Gim (ARC)</title>
+		<title>Namho Kim (ARC)</title>
 
 		<!-- Disable tap highlight on IE -->
 		<meta name="msapplication-tap-highlight" content="no">
@@ -21,7 +21,7 @@
 		<!-- Add to homescreen for Safari on iOS -->
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-status-bar-style" content="black">
-		<meta name="apple-mobile-web-app-title" content="Namho Gim (ARC)">
+		<meta name="apple-mobile-web-app-title" content="Namho Kim (ARC)">
 		<link rel="apple-touch-icon" href="images/touch/icon-128x128.png">
 
 		<!-- Tile icon for Win8 (144x144 + tile color) -->
@@ -60,19 +60,19 @@
 				<div class="mdl-layout--large-screen-only mdl-layout__header-row">
 					<img src="./images/touch/Seoul_national_university_emblem.png" alt="snulogo" style="width:162px;height:162px;">
 					<img src="./images/touch/arclogo-192x192.png" alt="arclogo" style="width:192px;height:192px;">
-					<h3>	Namho Gim (ARC)</h3>
+					<h3>	Namho Kim (ARC)</h3>
 				</div>
 				<div class="mdl-layout--large-screen-only mdl-layout__header-row">
 				</div>
 				<div class="mdl-layout__tab-bar mdl-js-ripple-effect mdl-color--primary-dark">
-					<a href="#namhogim" class="mdl-layout__tab is-active">Namho Gim</a>
+					<a href="#namhokim" class="mdl-layout__tab is-active">Namho Kim</a>
 					<a href="#publications" class="mdl-layout__tab">Publications</a>
 					<a href="#researches" class="mdl-layout__tab">Researches</a>
 					<a href="#contact" class="mdl-layout__tab">FAQ</a>
 				</div>
 			</header>
 			<main class="mdl-layout__content">
-			<div class="mdl-layout__tab-panel is-active" id="namhogim">
+			<div class="mdl-layout__tab-panel is-active" id="namhokim">
 				<section class="section--center mdl-grid mdl-grid--no-spacing mdl-shadow--2dp">
 					<header class="section__play-btn mdl-cell mdl-cell--3-col-desktop mdl-cell--2-col-tablet mdl-cell--4-col-phone mdl-color--teal-100 mdl-color-text--white">
 						<img src="./images/touch/profile.png" alt="profile" style="width:200px;height:200px;">
@@ -365,7 +365,7 @@
 					<!--<div class="mdl-logo">
 		 </div>-->
 		 <ul class="mdl-mega-footer--link-list">
-			 <li>Copyright &#169 2017 <a class="org fn url" href="/" target="_blank">Namho Gim (ARC)</a> All right reserved.</li>
+			 <li>Copyright &#169 2017 <a class="org fn url" href="/" target="_blank">Namho Kim (ARC)</a> All right reserved.</li>
 			 <li><a href="https://scholar.google.co.kr/citations?user=tFNxNtAAAAAJ&hl=en">Google Scholar</a></li>
 			 <li><a href="#">Help</a></li>
 			 <li><a href="#">Privacy and Terms</a></li>
