add link to article.

--- a/index.html
+++ b/index.html
@@ -218,13 +218,23 @@
 						The research contents ...	
 						<ul class="toc">
 							<h4>Contents</h4>
-							<a href="#lorem1">Lorem ipsum</a>
+							<a href="#gitsum">git summary</a>
 							<a href="#lorem2">Lorem ipsum</a>
 							<a href="#lorem3">Lorem ipsum</a>
 							<a href="#lorem4">Lorem ipsum</a>
 							<a href="#lorem5">Lorem ipsum</a>
 						</ul>
-
+						<section class="section--center mdl-grid mdl-grid--no-spacing mdl-shadow--2dp">
+							<div class="mdl-card mdl-cell mdl-cell--12-col">
+								<div class="mdl-card__supporting-text">
+									<h4 id="gitsum">git summary</h4>
+									git summary by NH		
+								</div>
+								<div class="mdl-card__actions">
+									<a href="./articles/gitsummary.html" class="mdl-button">Details</a>
+								</div>
+							</div>
+						</section>
 						<h5 id="lorem1">Lorem ipsum dolor sit amet</h5>
 						Excepteur et pariatur officia veniam anim culpa cupidatat consequat ad velit culpa est non.
 						<ul>
