--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 								Channoh Kim, Jaehyeok Kim, Sungmin Kim, Dooyoung Kim, <u>Namho Kim</u>, Gitae Na, Young H. Oh, Hyeon Gyu Cho, and Jae W. Lee,
 								"Typed Architectures: Architectural Support for Lightweight Scripting",
 								<i>22nd ACM Architectural Support for Programming Languages and Operating Systems (ASPLOS)</i>,
-								Xi'an, China, April 2017. (To Appear)
+								Xi'an, China, April 2017.
 							</p>
 						</ul>
 						
