update email address.

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
 					<div class="mdl-cell mdl-cell--12-col">
 						<h4>Contact</h4>
 						<ul>
-							<li>Email : kkjknh2 at gmail dot com</li>
+							<li>Email : kkjknh2 at snu dot ac dot kr</li>
 						</ul>
 						<!--<ul class="toc">
 							<h4>Contents</h4>
