commit the comment of the olympia by Manet.

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 					<a href="#namhokim" class="mdl-layout__tab is-active">Namho Kim</a>
 					<a href="#publications" class="mdl-layout__tab">Publications</a>
 					<a href="#researches" class="mdl-layout__tab">Researches</a>
-					<a href="#art" class="mdl-layout__tab">Art</a>
+					<a href="#fineart" class="mdl-layout__tab">Fine Art</a>
 					<a href="#contact" class="mdl-layout__tab">Contact</a>
 				</div>
 			</header>
@@ -236,18 +236,30 @@
 					</div>
 				</section>
 			</div>
-			<div class="mdl-layout__tab-panel" id="art">
+			<div class="mdl-layout__tab-panel" id="fineart">
 				<section class="section--center mdl-grid mdl-grid--no-spacing">
 					<div class="mdl-cell mdl-cell--12-col">
-						<h4>Art</h4>
+						<h4>Fine Art</h4>
 						<ul class="toc">
 							<h4>Contents</h4>
-							<a href="#">Lorem ipsum</a>
+							<a href="#olympia">Olympia (Manet)</a>
 							<a href="#">Lorem ipsum</a>
 							<a href="#">Lorem ipsum</a>
 							<a href="#">Lorem ipsum</a>
 							<a href="#">Lorem ipsum</a>
 						</ul>
+						<section class="section--center mdl-grid mdl-grid--no-spacing mdl-shadow--2dp">
+							<div class="mdl-card mdl-cell mdl-cell--12-col">
+								<div class="mdl-card__supporting-text">
+									<h4 id="olympia">Olympia (Manet)</h4>
+										Artist	Édouard Manet
+										Year	1863
+										Medium	Oil on canvas
+										Dimensions	130.5 cm × 190 cm (51.4 in × 74.8 in)
+										Location	Musée d'Orsay, Paris
+								</div>
+							</div>
+						</section>
 						<!--<h5 id="lorem1">test title</h5>-->
 					</div>
 				</section>
