comment minor update.

--- a/index.html
+++ b/index.html
@@ -252,11 +252,13 @@
 							<div class="mdl-card mdl-cell mdl-cell--12-col">
 								<div class="mdl-card__supporting-text">
 									<h4 id="olympia">Olympia (Manet)</h4>
-										Artist	Édouard Manet
-										Year	1863
-										Medium	Oil on canvas
-										Dimensions	130.5 cm × 190 cm (51.4 in × 74.8 in)
-										Location	Musée d'Orsay, Paris
+									<p>
+										Artist:	Édouard Manet
+										Year:	1863
+										Medium:	Oil on canvas
+										Dimensions:	130.5 cm × 190 cm (51.4 in × 74.8 in)
+										Location:	Musée d'Orsay, Paris
+									</p>
 								</div>
 							</div>
 						</section>
