typo and breaking lines.

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 							<h4>Education</h4>
 							<ul>
 								<p>
-									<b>Soeul National University (SNU)</b>, March 2017 -
+									<b>Seoul National University (SNU)</b>, March 2017 -
 									<br>
 									Master Candidate in <i>Dept. of Computer Science and Engineering</i>
 									, advised by  <a href="http://people.csail.mit.edu/leejw/">Jae W. Lee</a>
@@ -253,11 +253,11 @@
 								<div class="mdl-card__supporting-text">
 									<h4 id="olympia">Olympia (Manet)</h4>
 									<p>
-										Artist:	Édouard Manet
-										Year:	1863
-										Medium:	Oil on canvas
-										Dimensions:	130.5 cm × 190 cm (51.4 in × 74.8 in)
-										Location:	Musée d'Orsay, Paris
+									Artist:	Édouard Manet<br>
+									Year:	1863<br>
+									Medium:	Oil on canvas<br>
+									Dimensions:	130.5 cm × 190 cm (51.4 in × 74.8 in)<br>
+									Location:	Musée d'Orsay, Paris<br>
 									</p>
 								</div>
 							</div>
