--- a/index.html
+++ b/index.html
@@ -252,6 +252,7 @@
 							<div class="mdl-card mdl-cell mdl-cell--12-col">
 								<div class="mdl-card__supporting-text">
 									<h4 id="olympia">Olympia (Manet)</h4>
+									<img src="./images/touch/olympia-1863.png" alt="olympia" style="width:100%;height:100%;">
 									<p>
 									Artist:	Édouard Manet<br>
 									Year:	1863<br>
