--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
 							<div class="mdl-card mdl-cell mdl-cell--12-col">
 								<div class="mdl-card__supporting-text">
 									<h4 id="olympia">Olympia (Manet)</h4>
-									<img src="./images/touch/olympia-1863.png" alt="olympia" style="width:50%;height:50%;">
+									<img src="./images/touch/olympia-1863.png" alt="olympia" style="width:80%;height:80%;"><br>
 									<p>
 									Artist:	Édouard Manet<br>
 									Year:	1863<br>
