--- a/index.html
+++ b/index.html
@@ -252,8 +252,9 @@
 							<div class="mdl-card mdl-cell mdl-cell--12-col">
 								<div class="mdl-card__supporting-text">
 									<h4 id="olympia">Olympia (Manet)</h4>
-									<img src="./images/touch/olympia-1863.png" alt="olympia" style="width:80%;height:80%;"><br>
+									<img src="./images/touch/olympia-1863.png" alt="olympia" style="width:100%;height:100%;">
 									<p>
+									<br>
 									Artist:	Édouard Manet<br>
 									Year:	1863<br>
 									Medium:	Oil on canvas<br>
