--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
 						<ul class="toc">
 							<h4>Contents</h4>
 							<a href="#olympia">Olympia (Manet)</a>
-							<a href="#lorem1">Lorem ipsum</a>
+							<a href="#impression_sunrise">Impression, Sunrise (Monet)</a>
 							<a href="#">Lorem ipsum</a>
 							<a href="#">Lorem ipsum</a>
 							<a href="#">Lorem ipsum</a>
@@ -260,6 +260,16 @@
 									Medium:	Oil on canvas<br>
 									Dimensions:	130.5 cm × 190 cm (51.4 in × 74.8 in)<br>
 									Location:	Musée d'Orsay, Paris<br>
+									</p>
+								</div>
+							</div>
+						</section>
+						<section class="section--center mdl-grid mdl-grid--no-spacing mdl-shadow--2dp">
+							<div class="mdl-card mdl-cell mdl-cell--12-col">
+								<div class="mdl-card__supporting-text">
+									<h4 id="#impression_sunrise">Impression, Sunrise (Monet)</h4>
+									<p>
+									To be appear.
 									</p>
 								</div>
 							</div>
