--- a/index.html
+++ b/index.html
@@ -268,8 +268,14 @@
 							<div class="mdl-card mdl-cell mdl-cell--12-col">
 								<div class="mdl-card__supporting-text">
 									<h4 id="impression_sunrise">Impression, Sunrise (Monet)</h4>
+									<img src="./images/touch/monet_impression_sunrise.png" alt="impression_sunrise" style="width:100%;height:100%;">
 									<p>
-									To be appear.
+									<br>
+									Artist:	Claude Monet <br>
+									Year:	1872 <br>
+									Medium:	Oil on canvas <br>
+									Dimensions:	48 cm × 63 cm (18.9 in × 24.8 in) <br>
+									Location:	Musée Marmottan Monet, Paris <br>
 									</p>
 								</div>
 							</div>
