--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 				<section class="section--center mdl-grid mdl-grid--no-spacing mdl-shadow--2dp">
 					<div class="mdl-card mdl-cell mdl-cell--12-col">
 						<div class="mdl-card__supporting-text mdl-grid">
-							<div class="mdl-cell mdl-cell--3-col">
+							<div class="mdl-cell mdl-cell--3-col-desktop mdl-cell-col-tablet mdl-cell--3-col-phone">
 								<img src="./images/touch/profile.png" alt="profile" style="width:100%;height:100%;">
 							</div>
 							<div class="mdl-cell mdl-cell--9-col-desktop mdl-cell--4-col-tablet mdl-cell--2-col-phone">
