--- a/index.html
+++ b/index.html
@@ -244,6 +244,8 @@
 							<h4>Contents</h4>
 							<a href="#olympia">Olympia (Manet)</a>
 							<a href="#impression_sunrise">Impression, Sunrise (Monet)</a>
+							<a href="#woman_with_a_hat" >Woman with a Hat (Matisse)</a>
+							<a href="#">Lorem ipsum</a>
 							<a href="#">Lorem ipsum</a>
 							<a href="#">Lorem ipsum</a>
 							<a href="#">Lorem ipsum</a>
@@ -276,6 +278,22 @@
 									Medium:	Oil on canvas <br>
 									Dimensions:	48 cm × 63 cm (18.9 in × 24.8 in) <br>
 									Location:	Musée Marmottan Monet, Paris <br>
+									</p>
+								</div>
+							</div>
+						</section>
+						<section class="section--center mdl-grid mdl-grid--no-spacing mdl-shadow--2dp">
+							<div class="mdl-card mdl-cell mdl-cell--12-col">
+								<div class="mdl-card__supporting-text">
+									<h4 id="woman_with_a_hat">Woman with a Hat (Matisse)</h4>
+									<img src="./images/touch/Matisse-Woman-with-a-Hat.png" alt="woman_with_a_hat" style="width:100%;height:100%;">
+									<p>
+									<br>
+									Artist:	Henri Matisse<br>
+									Year:	1905<br>
+									Medium:	Oil on canvas<br>
+									Dimensions:	80.65 cm × 59.69 cm (​31 3⁄4 in × ​23 1⁄2 in)<br>
+									Location:	San Francisco Museum of Modern Art<br>
 									</p>
 								</div>
 							</div>
