index minor changes.

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 							<div class="mdl-cell mdl-cell--9-col-desktop mdl-cell--5-col-tablet mdl-cell--5-col-phone">
 								<p>
 									<ul>
-										My name is Namho Kim and I was an M.S. student at Computer Science and Engineering Department 
+										My name is Namho Kim and I was graduate student in Computer Science and Engineering Department 
 										in SNU as a member of Computer Architecture and Code Optimization Lab (ARC).
 									</ul>
 								</p>
@@ -98,9 +98,9 @@
 							<h4>Education</h4>
 							<ul>
 								<p>
-									<b>Seoul National University (SNU)</b>, March 2017 - 2019
+									<b>Seoul National University (SNU)</b>, March 2017 - Feburary 2019
 									<br>
-									Master at <i>Dept. of Computer Science and Engineering</i>
+									Master in <i>Dept. of Computer Science and Engineering</i>
 									, advised by  <a href="http://people.csail.mit.edu/leejw/">Jae W. Lee</a>
 								</p>
 								<p>
